feat: connected surfaces table in ui
